--- a/js/songs/index.html
+++ b/js/songs/index.html
@@ -2,5 +2,5 @@
 
 
 <div data-ng-repeat = "song in vm.songs">
-<p> {{ song.title }} </p>
+<p> <a data-ui-sref="songShow({id: song.id})">{{ song.title }}</a> </p>
 </div>
